# pyrl

./: .bashrc  .gitignore  .todo  .vimrc  Makefile  README.md  README.txt  advanced_creature.py  ai.py  bindings.py  bresenham.py  char.py  clean  colors.py  combat.py  constants.py  cpyrl.sh  creature.py  creature_actions.py  creature_stats.py  d  data  debug.py  debug_editor  debug_flags.py  debug_vim  dice.py  dir_constants.py  dummy_map.py  dummymap.py  dungeonproperties.py  dungeonswitcher.py  e  edit_level.py  edit_map.py  editor  editor.py  editor_init.py  exec_editor.py  floor.py  (+74 more)
.git-tasks/: backlog.data  completed.data  pending.data  undo.data
.vim/: .VimballRecord
config/: bindings.py  debug.py  finalize.py  game.py  hotkeys.py  mappings.py
const/: colors.py  creature_actions.py  debug.py  directions.py  exception.py  game.py  generated_level_types.py  keys.py  maps.py  monsters.py  player.py  slots.py  stats.py  tiles.py
controllers/: debug_action.py  user_controller.py  user_controller_proxy.py  walk_mode.py
creature/: __init__.py  actions.py  advanced_creature.py  creature.py  equipment.py  has_equipment.py  item.py  remembers_vision.py  stats.py  template.py
data/: data  level_templates  tiles
design/: setting
docs/: LIBTCOD-LICENSE.txt  PYRL-LICENSE.txt  README  todo
editor/: level_templates  main.py  maptemplates  tilemap_editor.py
editor_data/: data  level_templates  levels  maps  tiles
enums/: colors.py  directions.py  keys.py  level_locations.py
game_data/: creatures.py  default_creatures.py  maps.py  player.py  pyrl_world.py  (+2 more)
(+339 files in other folders)
